--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-publish_path=bin/Release/net8.0/publish/wwwroot/
+publish_path=AstroPlanner/bin/Release/net8.0/publish/wwwroot/
 ssh_username=$(DH_USER)
 ssh_password=$(DH_PASSWORD)
 ssh_port=$(DH_PORT)
@@ -14,10 +14,10 @@ default:
 	@echo '  clean      -- Remove binaries and other generated files.'
 
 watch:
-	dotnet watch
+	cd AstroPlanner; dotnet watch
 
 publish:
-	dotnet publish -c Release
+	cd AstroPlanner; dotnet publish -c Release
 
 php-serve:
 	@cd $(publish_path); php -S 0.0.0.0:8088
@@ -26,5 +26,7 @@ deploy:
 	@sshpass -p '$(ssh_password)' rsync -avze 'ssh -p $(ssh_port)' $(publish_path) $(ssh_username)@$(ssh_host):$(remote_path)
 
 clean:
-	-rm -rf bin/
-	-rm -rf obj/
+	-rm -rf AstroPlanner/bin/
+	-rm -rf AstroPlanner/obj/
+	-rm -rf AstroPlanner.Util/bin/
+	-rm -rf AstroPlanner.Util/obj/
